styles for scrollbar - corrections styles for edit event dialogue box

--- a/app/assets/stylesheets/brandscopic.less
+++ b/app/assets/stylesheets/brandscopic.less
@@ -4929,6 +4929,7 @@ body.campaigns_report, body.staff_report {
  
   border:thin solid @brand;
   border-radius: 10px;
+  height: 5px;
   -webkit-border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb:hover{
