--- a/app/assets/stylesheets/modals.less
+++ b/app/assets/stylesheets/modals.less
@@ -185,6 +185,15 @@ ul.select2-results{
 				    }
 			    }
 			}
+			.edit-event{
+				.chzn-container-single 
+					.chzn-single{
+						width: 545px !important;
+					}
+					.chzn-drop{
+						width: 555px !important;
+					}
+			}
 			.users-teams-roles{
 				.control-group{
 					margin-right: 0;
@@ -751,6 +760,7 @@ ul.select2-results{
 		margin-top: 3px !important;
 		width: 252px !important;
 		ul.chzn-results{
+			margin: 0;
 			padding: 0;
 			li{
 				padding: 8px 6px !important;
